[package]
links = "thorin"
build = "build.rs"
name = "thorin"
version = "0.1.0"
authors = ["Ajay MT <ajaymt2@illinois.edu>"]

[dependencies]
gimli = "0.17.0"
object = "0.11"
memmap = "0.7"
fallible-iterator = "0.1.6"
libc = "0.2.50"
text_io = "0.1"
hex = "0.3"
rand = "0.6"

[build-dependencies]
cc = "1.0"